--- a/dienst/dienst-transactie-ap.html
+++ b/dienst/dienst-transactie-ap.html
@@ -289,7 +289,7 @@
       </div>
       <div class="region region--no-space-top">
           <div class="layout layout--normal">
-            <img src="http://52.50.205.146:8890/aiv/OSLO-Dienst_applicatieprofiel_transactie.jpg" />
+            <img src="OSLO-Dienst_applicatieprofiel_transactie.jpg" />
           </div>
       </div>
       
