--- a/persoon/persoon-burgerloket-ap.html
+++ b/persoon/persoon-burgerloket-ap.html
@@ -169,7 +169,7 @@
       </div>
       <div class="region region--no-space-top">
           <div class="layout layout--normal">
-            <img src="http://52.50.205.146:8890/aiv/OSLO-Persoon_applicatieprofiel_burgerloket.jpg" />
+            <img src="OSLO-Persoon_applicatieprofiel_burgerloket.jpg" />
           </div>
       </div>
       
