--- a/persoon/persoon-profiel-ap.html
+++ b/persoon/persoon-profiel-ap.html
@@ -151,7 +151,7 @@
       </div>
       <div class="region region--no-space-top">
           <div class="layout layout--normal">
-            <img src="http://52.50.205.146:8890/aiv/OSLO-Persoon_applicatieprofiel_profiel.jpg" />
+            <img src="OSLO-Persoon_applicatieprofiel_profiel.jpg" />
           </div>
       </div>
       
