--- a/index.html
+++ b/index.html
@@ -16,12 +16,25 @@
 </head>
 
 <body>
+  <h1>Vocabularia</h1>
   <ul>
     <li><a href="melding/melding.html" target="_blank">Melding</a></li>
+  </ul>
+  <h1>JSON-LD Context</h1>
+  <ul>
+    <li><a href="generiek/generiek.jsonld" target="_blank">Generiek</a></li>
+    <li><a href="adres/adres.jsonld" target="_blank">Adres</a></li>
+    <li><a href="organisatie/organisatie.jsonld" target="_blank">Organisatie</a></li>
+    <li><a href="persoon/persoon.jsonld" target="_blank">Persoon</a></li>
+    <li><a href="dienst/dienst.jsonld" target="_blank">Dienst</a></li>
+    <li><a href="melding/melding.jsonld" target="_blank">Melding</a></li>
+  </ul>
+  <h1>Applicatieprofielen</h1>
+  <ul>
     <li><a href="melding/melding-ap.html" target="_blank">Melding AP</a></li>
-    <li><a href="" target="_blank">Dienst Transactiemodel AP</a></li>
-    <li><a href="" target="_blank">Persoon Burgerloket AP</a></li>
-    <li><a href="" target="_blank">Persoon Profiel AP</a></li>
+    <li><a href="dienst/dienst-transactie-ap.html" target="_blank">Dienst Transactiemodel AP</a></li>
+    <li><a href="persoon/persoon-burgerloket-ap.html" target="_blank">Persoon Burgerloket AP</a></li>
+    <li><a href="persoon/persoon-profiel-ap.html" target="_blank">Persoon Profiel AP</a></li>
   </ul>
 </body>
 </html>
