--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li><a href="melding/melding-ap.html" target="_blank">Melding AP</a></li>
     <li><a href="dienst/dienst-transactie-ap.html" target="_blank">Dienst Transactiemodel AP</a></li>
     <li><a href="persoon/persoon-burgerloket-ap.html" target="_blank">Persoon Burgerloket AP</a></li>
-    <li><a href="persoon/persoon-profiel-ap.html" target="_blank">Persoon Profiel AP</a></li>
+    <li><a href="persoon/profiel-ap.html" target="_blank">Persoon Profiel AP</a></li>
   </ul>
 </body>
 </html>
