--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <h1>Vocabularia</h1>
   <ul>
     <li><a href="melding/melding.html" target="_blank">Melding</a></li>
+    <li><a href="profiel/profiel.html" target="_blank">Profiel</a></li>
   </ul>
   <h1>JSON-LD Context</h1>
   <ul>
@@ -28,13 +29,14 @@
     <li><a href="persoon/persoon.jsonld" target="_blank">Persoon</a></li>
     <li><a href="dienst/dienst.jsonld" target="_blank">Dienst</a></li>
     <li><a href="melding/melding.jsonld" target="_blank">Melding</a></li>
+    <li><a href="profiel/profiel.jsonld" target="_blank">Melding</a></li>
   </ul>
   <h1>Applicatieprofielen</h1>
   <ul>
     <li><a href="melding/melding-ap.html" target="_blank">Melding AP</a></li>
     <li><a href="dienst/dienst-transactie-ap.html" target="_blank">Dienst Transactiemodel AP</a></li>
     <li><a href="persoon/persoon-burgerloket-ap.html" target="_blank">Persoon Burgerloket AP</a></li>
-    <li><a href="persoon/profiel-ap.html" target="_blank">Persoon Profiel AP</a></li>
+    <li><a href="profiel/profiel-ap.html" target="_blank">Persoon Profiel AP</a></li>
   </ul>
 </body>
 </html>
