Toevoegen model "Vastgoed" en fix rdfs:Literal > xsd:String

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <li><a href="melding/melding.html" target="_blank">Melding</a></li>
     <li><a href="profiel/profiel.html" target="_blank">Profiel</a></li>
     <li><a href="notificatie/notificatie.html" target="_blank">Notificatie</a></li>
+    <li><a href="vastgoed/vastgoed.html" target="_blank">Vastgoed</a></li>
   </ul>
   <h1>JSON-LD Context</h1>
   <ul>
@@ -32,6 +33,7 @@
     <li><a href="melding/melding.jsonld" target="_blank">Melding</a></li>
     <li><a href="profiel/profiel.jsonld" target="_blank">Profiel</a></li>
     <li><a href="notificatie/notificatie.jsonld" target="_blank">Notificatie</a></li>
+    <li><a href="vastgoed/vastgoed.jsonld" target="_blank">Vastgoed</a></li>
   </ul>
   <h1>Applicatieprofielen</h1>
   <ul>
@@ -40,6 +42,7 @@
     <li><a href="persoon/persoon-burgerloket-ap.html" target="_blank">Persoon Burgerloket AP</a></li>
     <li><a href="profiel/profiel-ap.html" target="_blank">Profiel AP</a></li>
     <li><a href="notificatie/notificatie-ap.html" target="_blank">Notificatie AP</a></li>
+    <li><a href="vastgoed/vastgoed-ap.html" target="_blank">Vastgoed AP</a></li>
   </ul>
 </body>
 </html>
