data.vlaanderen.be - initial commit

--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@
     <li><a href="profiel/profiel-ap.html" target="_blank">Profiel AP</a></li>
     <li><a href="notificatie/notificatie-ap.html" target="_blank">Notificatie AP</a></li>
   </ul>
+  <h1>data.vlaanderen.be</h1>
+  <ul>
+    <li><a href="data.vlaanderen.be/index.html" target="_blank">Home pagina</a></li>
+    <li><a href="data.vlaanderen.be/ns.html" target="_blank">ns</a></li>
+  </ul>
 </body>
 </html>
