--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -48,6 +48,12 @@
 
 		<section class="region">
 			<div class="layout layout--wide">
+				<p>Data.Vlaanderen.be is het domein waarop de <a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> data ontsluit volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Dit domein past binnen het de doelstelling van de Vlaamse overheid om in te zetten op een éénduidige standaard voor de uitwisseling van informatie. Het project <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2">Open Standaarden voor Linkende Overheden</a> (OSLO²) is de overkoepelende drijvende kracht achter de dienstverlening van Data.Vlaanderen.be.</p>
+				<br>
+			</div>
+
+
+			<div class="layout layout--wide">
 				<div class="grid grid--is-stacked js-equal-height-container u-spacer">
 					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
 						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#applicatieProfielen">
@@ -142,12 +148,6 @@
 
 
 			<div class="layout layout--wide">
-				<!-- component -->
-
-
-				<p>Data.Vlaanderen.be is het domein waarop de <a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> data ontsluit volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Dit domein past binnen het de doelstelling van de Vlaamse overheid om in te zetten op een éénduidige standaard voor de uitwisseling van informatie. Het project <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2">Open Standaarden voor Linkende Overheden</a> (OSLO²) is de overkoepelende drijvende kracht achter de dienstverlening van Data.Vlaanderen.be.</p>
-
-
 				<p>Alle identificatoren van informatie-objecten die beschikbaar zijn via dit domein in de vorm van een URI zijn persistent en semantisch éénduidig. Met andere woorden, gebruikers van de URI's met als domein data.vlaanderen.be kunnen ervan uitgaan dat deze identificatoren steeds zullen blijven bestaan en dat in de loop van de tijd deze identificatoren steeds zullen verwijzen naar één en hetzelfde object.</p>
 
 
