--- a/profiel/profiel-ap.html
+++ b/profiel/profiel-ap.html
@@ -1299,7 +1299,7 @@ die toelaat de Persoon te contacteren.</td>
                                 </a>
                             </code>
                             </td>
-                            <td><a href="" data-toggle="tooltip" data-content="" data-placement="right">Aanschrijfvorm</a></td>
+                            <td><a href="http://www.w3.org/2001/XMLSchema#string" data-toggle="tooltip" data-content="http://www.w3.org/2001/XMLSchema#string" data-placement="right">String</a></td>
                             <td>0 .. 1</td>
                             <td property="rdfs:comment">TODO</td>
                             <td property="vann:usageNote"></td>
