--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -327,5 +327,19 @@
 			</section>
 		</section>
 	</div>
+	<!-- End page content -->
+
+
+	<div class="u-spacer--large">
+	</div>
+
+
+	<div id="vlaanderen-footer">
+		<!-- insert your Vlaanderen-footer-code here -->
+		<script src="//widgets.vlaanderen.be/widget/live/d6d44414e7c242f396ab6da8f8da5198" type="text/javascript">
+		</script> <!-- End global footer-->
+	</div>
+	<script src="https://dij151upo6vad.cloudfront.net/2.latest/js/vlaanderen-ui.js">
+	</script>
 </body>
 </html>
