Update teksten vocabularia en applicatieprofielen.

--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -48,7 +48,7 @@
 
 		<section class="region">
 			<div class="layout layout--wide">
-				<p>Data.Vlaanderen.be is het domein waarop de <a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> data ontsluit volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Dit domein past binnen het de doelstelling van de Vlaamse overheid om in te zetten op een éénduidige standaard voor de uitwisseling van informatie. Het project <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2">Open Standaarden voor Linkende Overheden</a> (OSLO²) is de overkoepelende drijvende kracht achter de dienstverlening van Data.Vlaanderen.be.</p>
+				<p>Data.Vlaanderen.be is het domein waarop <a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> data ontsluit volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Dit domein past binnen de doelstelling van de Vlaamse overheid om in te zetten op een éénduidige standaard voor de uitwisseling van informatie. Het project <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2">Open Standaarden voor Linkende Overheden</a> (OSLO²) is de overkoepelende drijvende kracht achter de dienstverlening van Data.Vlaanderen.be.</p>
 				<br>
 			</div>
 
@@ -56,57 +56,12 @@
 			<div class="layout layout--wide">
 				<div class="grid grid--is-stacked js-equal-height-container u-spacer">
 					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#applicatieProfielen">
-						<article>
-							<h1 class="spotlight__title">Applicatieprofielen</h1>
-
-
-							<div class="spotlight__data" data-clamp="4">
-								<div class="spotlight__data__value">
-									Ontdek hier de beschikbare applicatiemodellen gepubliceerd als kandidaat-standaarden
-								</div>
-							</div>
-						</article></a>
-					</div>
-
-
-					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#vocabularia">
-						<article>
-							<h1 class="spotlight__title">Vocabularia</h1>
-
-
-							<div class="spotlight__data" data-clamp="4">
-								<div class="spotlight__data__value">
-									Ontdek hier de beschikbare vocabularia gepubliceerd als kandidaat-standaarden
-								</div>
-							</div>
-						</article></a>
-					</div>
-
-
-					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="https://docs.google.com/document/d/1tbK17wmgkIlNOXjYRE3Arf3PMI--8TvidBprKOcgcvQ/edit?usp=sharing">
-						<article>
-							<h1 class="spotlight__title">Handleidingen</h1>
-
-
-							<div class="spotlight__data" data-clamp="4">
-								<div class="spotlight__data__value">
-									Ontdek hier hoe je een oplossing ontwikkeld in lijn met OSLO²
-								</div>
-							</div>
-						</article></a>
-					</div>
-
-
-					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
 						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data">
 						<article>
 							<h1 class="spotlight__title">BETA release CRAB-LOD</h1>
 
 
-							<div class="spotlight__data" data-clamp="4">
+							<div class="spotlight__data" data-clamp="6">
 								<div class="spotlight__data__value">
 									Een eerste dataset die ontsloten wordt op dit domein zijn de adressen uit het adressenregister (CRAB).
 								</div>
@@ -121,7 +76,7 @@
 							<h1 class="spotlight__title">SPARQL-endpoint for CRAB-LOD</h1>
 
 
-							<div class="spotlight__data" data-clamp="4">
+							<div class="spotlight__data" data-clamp="6">
 								<div class="spotlight__data__value">
 									Het SPARQL-endpoint biedt de mogelijkheid om complexe vragen in SPARQL te stellen over de beschikbare data.
 								</div>
@@ -136,13 +91,59 @@
 							<h1 class="spotlight__title">RDF-dump CRAB-LOD</h1>
 
 
-							<div class="spotlight__data" data-clamp="4">
+							<div class="spotlight__data" data-clamp="6">
 								<div class="spotlight__data__value">
 									De publicatie van het linked open dataproduct, minimaal met dereferenceable URI’s aangeboden.
 								</div>
 							</div>
 						</article></a>
 					</div>
+
+
+					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#vocabularia">
+						<article>
+							<h1 class="spotlight__title">Vocabularia</h1>
+
+
+							<div class="spotlight__data" data-clamp="6">
+								<div class="spotlight__data__value">
+									Vocabularia beschrijven semantiek, de concepten die beschreven worden zijn bruikbaar in verschillende toepassingsdomeinen. De OSLO² vocabularia zijn gepubliceerd als kandidaat-standaarden.
+								</div>
+							</div>
+						</article></a>
+					</div>
+
+
+					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#applicatieProfielen">
+						<article>
+							<h1 class="spotlight__title">Applicatieprofielen</h1>
+
+
+							<div class="spotlight__data" data-clamp="6">
+								<div class="spotlight__data__value">
+									Ontdek hier de beschikbare applicatieprofielen gepubliceerd als kandidaat-standaarden. Applicatieprofielen zijn specificaties voor gegevensuitwisseling in bepaalde use cases.
+								</div>
+							</div>
+						</article></a>
+					</div>
+
+
+					<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+						<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="https://docs.google.com/document/d/1tbK17wmgkIlNOXjYRE3Arf3PMI--8TvidBprKOcgcvQ/edit?usp=sharing">
+						<article>
+							<h1 class="spotlight__title">Handleidingen</h1>
+
+
+							<div class="spotlight__data" data-clamp="6">
+								<div class="spotlight__data__value">
+									Ontdek hier hoe je interoperabele toepassingen en web services ontwikkeld via Open Standaarden voor Linkende Organisaties (OSLO²).
+								</div>
+							</div>
+						</article></a>
+					</div>
+
 				</div>
 			</div>
 
@@ -211,9 +212,9 @@
 									<h1 class="spotlight__title">Generiek</h1>
 
 
-									<div class="spotlight__data" data-clamp="4">
+									<div class="spotlight__data" data-clamp="6">
 										<div class="spotlight__data__value">
-											Een algemeen ondersteunend vocabularium
+											Een algemeen ondersteunend vocabularium.
 										</div>
 									</div>
 								</article></a>
@@ -226,9 +227,9 @@
 									<h1 class="spotlight__title">Adres</h1>
 
 
-									<div class="spotlight__data" data-clamp="4">
+									<div class="spotlight__data" data-clamp="6">
 										<div class="spotlight__data__value">
-											Het Adres vocabularium
+											Het Adres vocabularium legt termen en definities vast voor het beschrijven van een Belgisch adres.
 										</div>
 									</div>
 								</article></a>
@@ -241,9 +242,9 @@
 									<h1 class="spotlight__title">Organisatie</h1>
 
 
-									<div class="spotlight__data" data-clamp="4">
+									<div class="spotlight__data" data-clamp="6">
 										<div class="spotlight__data__value">
-											Het Organisatie vocabularium
+											Het Organisatie vocabularium legt termen en definities vast voor het beschrijven van organisaties en bouwt verder op de vocabularia van W3C en ISA.
 										</div>
 									</div>
 								</article></a>
@@ -254,11 +255,9 @@
 								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/persoon">
 								<article>
 									<h1 class="spotlight__title">Persoon</h1>
-
-
-									<div class="spotlight__data" data-clamp="4">
+									<div class="spotlight__data" data-clamp="6">
 										<div class="spotlight__data__value">
-											Het Persoon vocabularium
+											Het Persoon vocabularium legt termen en definities vast voor het beschrijven van personen en hun relaties. Het bouwt verder op vocabularia van W3C en ISA. 
 										</div>
 									</div>
 								</article></a>
@@ -266,14 +265,12 @@
 
 
 							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/dienst">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/persoon">
 								<article>
 									<h1 class="spotlight__title">Dienst</h1>
-
-
-									<div class="spotlight__data" data-clamp="4">
+									<div class="spotlight__data" data-clamp="6">
 										<div class="spotlight__data__value">
-											Het Dienst vocabularium
+											Het Dienst vocabularium legt termen en definities vast voor het beschrijven van publieke dienstverlening. Het is gebaseerd op het Core Public Service Vocabulary Application Profile.
 										</div>
 									</div>
 								</article></a>
@@ -285,7 +282,12 @@
 							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
 								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/generiek">
 								<article>
-									<h1 class="spotlight__title">ApplicatieProfiel Generiek Basis</h1>
+									<h1 class="spotlight__title">Applicatieprofiel Generiek Basis</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van algemene concepten als contactinformatie, geometrieën en herkomstinformatie.
+										</div>
+									</div>
 								</article></a>
 							</div>
 
@@ -293,7 +295,12 @@
 							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
 								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#http://data.vlaanderen.be/doc/applicatieprofiel/adres">
 								<article>
-									<h1 class="spotlight__title">ApplicatieProfiel Adresregister</h1>
+									<h1 class="spotlight__title">Applicatieprofiel Adresregister</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een adresregister.
+										</div>
+									</div>
 								</article></a>
 							</div>
 
@@ -301,7 +308,12 @@
 							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
 								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/organisatie">
 								<article>
-									<h1 class="spotlight__title">ApplicatieProfiel Organisatie Basis</h1>
+									<h1 class="spotlight__title">Applicatieprofiel Organisatie Basis</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een organisatieregister.
+										</div>
+									</div>
 								</article></a>
 							</div>
 
@@ -309,7 +321,12 @@
 							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
 								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/persoon">
 								<article>
-									<h1 class="spotlight__title">ApplicatieProfiel Persoon Basis</h1>
+									<h1 class="spotlight__title">Applicatieprofiel Persoon Basis</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van persoonsgegevens in de context vaan een personenregister of bij het uitvoeren van publieke dienstverlening.
+										</div>
+									</div>
 								</article></a>
 							</div>
 
@@ -317,11 +334,17 @@
 							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
 								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/generiek">
 								<article>
-									<h1 class="spotlight__title">ApplicatieProfiel Dienstencataloog</h1>
+									<h1 class="spotlight__title">Applicatieprofiel Dienstencataloog</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van gegevens met betrekking tot publieke dienstverlening in de context van een dienstencataloog.
+										</div>
+									</div>
 								</article></a>
 							</div>
 						</div>
-						Wat een vocabularium en een applicatieprofiel nu juist is en hoe beide zich tot elkaar verhouden lees je op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.
+						<p>Wat een vocabularium en een applicatieprofiel nu juist is en hoe beide zich tot elkaar verhouden lees je op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
+						<p>Wil je aan de slag gaan met deze vocabularia en applicatieprofielen om interoperabele toepassingen en web services te ontwikkelen? Neem dan zeker onze <a href="#">documentatie</a> door.</p>
 					</div>
 				</div>
 			</section>
