--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -52,131 +52,154 @@
 					<h1 class="info-block__title">OSLO² Specificaties (kandidaat-standaarden)</h1>
 				</header>
 
+					<div class="info-block__content">
+						<p>Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO² specificaties gepromoot tot volwaardige standaarden. Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
+						<br>
+						De volgende vocabularia zijn beschikbaar:
 
-				<div class="info-block__content">
-					<p>Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO² specificaties gepromoot tot volwaardige standaarden. Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
-					<br>
-					De volgende vocabularia zijn beschikbaar:
-
-					<div class="grid grid--is-stacked js-equal-height-container u-spacer" id="vocabularia">
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/generiek">
-							<article>
-								<h1 class="spotlight__title">Generiek</h1>
+						<div class="grid grid--is-stacked js-equal-height-container u-spacer" id="vocabularia">
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/generiek">
+								<article>
+									<h1 class="spotlight__title">Generiek</h1>
 
 
-								<div class="spotlight__data" data-clamp="4">
-									<div class="spotlight__data__value">
-										Een algemeen ondersteunend vocabularium
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Een algemeen ondersteunend vocabularium.
+										</div>
 									</div>
-								</div>
-							</article></a>
-						</div>
+								</article></a>
+							</div>
 
 
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/adres">
-							<article>
-								<h1 class="spotlight__title">Adres</h1>
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/adres">
+								<article>
+									<h1 class="spotlight__title">Adres</h1>
 
 
-								<div class="spotlight__data" data-clamp="4">
-									<div class="spotlight__data__value">
-										Het Adres vocabularium
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Het Adres vocabularium legt termen en definities vast voor het beschrijven van een Belgisch adres.
+										</div>
 									</div>
-								</div>
-							</article></a>
-						</div>
+								</article></a>
+							</div>
 
 
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/organisatie">
-							<article>
-								<h1 class="spotlight__title">Organisatie</h1>
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/organisatie">
+								<article>
+									<h1 class="spotlight__title">Organisatie</h1>
 
 
-								<div class="spotlight__data" data-clamp="4">
-									<div class="spotlight__data__value">
-										Het Organisatie vocabularium
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Het Organisatie vocabularium legt termen en definities vast voor het beschrijven van organisaties en bouwt verder op de vocabularia van W3C en ISA.
+										</div>
 									</div>
-								</div>
-							</article></a>
-						</div>
+								</article></a>
+							</div>
 
 
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/persoon">
-							<article>
-								<h1 class="spotlight__title">Persoon</h1>
-
-
-								<div class="spotlight__data" data-clamp="4">
-									<div class="spotlight__data__value">
-										Het Persoon vocabularium
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/persoon">
+								<article>
+									<h1 class="spotlight__title">Persoon</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Het Persoon vocabularium legt termen en definities vast voor het beschrijven van personen en hun relaties. Het bouwt verder op vocabularia van W3C en ISA. 
+										</div>
 									</div>
-								</div>
-							</article></a>
-						</div>
+								</article></a>
+							</div>
 
 
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/dienst">
-							<article>
-								<h1 class="spotlight__title">Dienst</h1>
-
-
-								<div class="spotlight__data" data-clamp="4">
-									<div class="spotlight__data__value">
-										Het Dienst vocabularium
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/persoon">
+								<article>
+									<h1 class="spotlight__title">Dienst</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Het Dienst vocabularium legt termen en definities vast voor het beschrijven van publieke dienstverlening. Het is gebaseerd op het <a href="https://joinup.ec.europa.eu/asset/cpsv-ap/description" target="_blank">Core Public Service Vocabulary Application Profile</a>.
+										</div>
 									</div>
-								</div>
-							</article></a>
+								</article></a>
+							</div>
 						</div>
+						De volgende applicatieprofielen zijn beschikbaar:
+
+						<div class="grid grid--is-stacked js-equal-height-container u-spacer" id="vocabularia">
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/generiek">
+								<article>
+									<h1 class="spotlight__title">Applicatieprofiel Generiek Basis</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van algemene concepten als contactinformatie, geometrieën en herkomstinformatie.
+										</div>
+									</div>
+								</article></a>
+							</div>
+
+
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#http://data.vlaanderen.be/doc/applicatieprofiel/adres">
+								<article>
+									<h1 class="spotlight__title">Applicatieprofiel Adresregister</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een adresregister.
+										</div>
+									</div>
+								</article></a>
+							</div>
+
+
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/organisatie">
+								<article>
+									<h1 class="spotlight__title">Applicatieprofiel Organisatie Basis</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een organisatieregister.
+										</div>
+									</div>
+								</article></a>
+							</div>
+
+
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/persoon">
+								<article>
+									<h1 class="spotlight__title">Applicatieprofiel Persoon Basis</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van persoonsgegevens in de context vaan een personenregister of bij het uitvoeren van publieke dienstverlening.
+										</div>
+									</div>
+								</article></a>
+							</div>
+
+
+							<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+								<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/generiek">
+								<article>
+									<h1 class="spotlight__title">Applicatieprofiel Dienstencataloog</h1>
+									<div class="spotlight__data" data-clamp="6">
+										<div class="spotlight__data__value">
+											Dit applicatieprofiel definieert een specificatie voor de uitwisseling van gegevens met betrekking tot publieke dienstverlening in de context van een dienstencataloog.
+										</div>
+									</div>
+								</article></a>
+							</div>
+						</div>
+						<p>Wat een vocabularium en een applicatieprofiel nu juist is en hoe beide zich tot elkaar verhouden lees je op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
+						<p>Wil je aan de slag gaan met deze vocabularia en applicatieprofielen om interoperabele toepassingen en web services te ontwikkelen? Neem dan zeker onze <a href="#">documentatie</a> door.</p>
 					</div>
-					De volgende applicatieprofielen zijn beschikbaar:
-
-					<div class="grid grid--is-stacked js-equal-height-container u-spacer" id="vocabularia">
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/generiek">
-							<article>
-								<h1 class="spotlight__title">ApplicatieProfiel Generiek Basis</h1>
-							</article></a>
-						</div>
-
-
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="#http://data.vlaanderen.be/doc/applicatieprofiel/adres">
-							<article>
-								<h1 class="spotlight__title">ApplicatieProfiel Adresregister</h1>
-							</article></a>
-						</div>
-
-
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/organisatie">
-							<article>
-								<h1 class="spotlight__title">ApplicatieProfiel Organisatie Basis</h1>
-							</article></a>
-						</div>
-
-
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/persoon">
-							<article>
-								<h1 class="spotlight__title">ApplicatieProfiel Persoon Basis</h1>
-							</article></a>
-						</div>
-
-
-						<div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight spotlight--alt js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/doc/applicatieprofiel/generiek">
-							<article>
-								<h1 class="spotlight__title">ApplicatieProfiel Dienstencataloog</h1>
-							</article></a>
-						</div>
-					</div>
-					Wat een vocabularium en een applicatieprofiel nu juist is en hoe beide zich tot elkaar verhouden lees je op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.
 				</div>
+
 			</div>
 		</section>
 	</div>
