fix tekst Dienst

--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -122,12 +122,14 @@
 									<h1 class="spotlight__title">Dienst</h1>
 									<div class="spotlight__data" data-clamp="6">
 										<div class="spotlight__data__value">
-											Het Dienst vocabularium legt termen en definities vast voor het beschrijven van publieke dienstverlening. Het is gebaseerd op het <a href="https://joinup.ec.europa.eu/asset/cpsv-ap/description" target="_blank">Core Public Service Vocabulary Application Profile</a>.
+											Het Dienst vocabularium legt termen en definities vast voor het beschrijven van publieke dienstverlening. Het is gebaseerd op het Core Public Service Vocabulary Application Profile.
 										</div>
 									</div>
 								</article></a>
 							</div>
 						</div>
+
+						
 						De volgende applicatieprofielen zijn beschikbaar:
 
 						<div class="grid grid--is-stacked js-equal-height-container u-spacer" id="vocabularia">
